tests/ui/rfcs/rfc-2632-const-trait-impl/const-drop-bound.stderr
error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop-bound.rs:9:68
   |
LL | const fn foo<T, E>(res: Result<T, E>) -> Option<T> where E: ~const Destruct {
   |                                                                    ^^^^^^^^

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop-bound.rs:20:15
   |
LL |     T: ~const Destruct,
   |               ^^^^^^^^

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop-bound.rs:21:15
   |
LL |     E: ~const Destruct,
   |               ^^^^^^^^

error: aborting due to 3 previous errors

